tests/ui/transparent-enum-source.stderr
error: transparent variant can't contain #[source]
 --> $DIR/tests/ui/transparent-enum-source.rs:6:11
  |
6 |     Other(#[source] anyhow::Error),
  |           ^^^^^^^^^
